added btn and divs, player, stick etc

--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="player-div">
+        <div class="player1">Player 1</div>
+
+        <div class="sticks-div">
+          <span id="numSticks"></span>
+        </div>
+
+        <div class="player2">Player 2</div>
+      </div>
+      <div class="btn-div">
+        <button type="button" class="btn btn-1">1</button>
+        <button type="button" class="btn btn-2">2</button>
+        <button type="button" class="btn btn-3">3</button>
+      </div>
+    </div>
+  </body>
 </html>
