--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
 
         <div class="player2">Player 2</div>
       </div>
+      <span class="txtSticks">Take amount of sticks</span>
       <div class="btn-div">
-        <button type="button" class="btn btn-1">1</button>
-        <button type="button" class="btn btn-2">2</button>
-        <button type="button" class="btn btn-3">3</button>
+        <div class="btn btn-1">
+          <button type="button" class="btn btn-1">1</button>
+        </div>
+        <div class="btn btn-2">
+          <button type="button" class="btn btn-2">2</button>
+        </div>
+        <div class="btn btn-3">
+          <button type="button" class="btn btn-3">3</button>
+          <br /><br />
+        </div>
       </div>
     </div>
   </body>
