--- a/index.html
+++ b/index.html
@@ -9,27 +9,32 @@
   <body>
     <div class="container">
       <div class="player-div">
-        <div class="player1">Player 1</div>
+        <div class="player1 player1-active">Player 1</div>
 
-        <div class="sticks-div">
-          <span id="numSticks"></span>
-        </div>
+        <div class="sticks-div"></div>
 
         <div class="player2">Player 2</div>
       </div>
       <span class="txtSticks">Take amount of sticks</span>
-      <div class="btn-div">
+      <div class="takeSticks-div">
         <div class="btn btn-1">
-          <button type="button" class="btn btn-1">1</button>
+          <button type="button" class="btn btn-1" onclick="takeSticks(1)">
+            1
+          </button>
         </div>
         <div class="btn btn-2">
-          <button type="button" class="btn btn-2">2</button>
+          <button type="button" class="btn btn-2" onclick="takeSticks(2)">
+            2
+          </button>
         </div>
         <div class="btn btn-3">
-          <button type="button" class="btn btn-3">3</button>
+          <button type="button" class="btn btn-3" onclick="takeSticks(3)">
+            3
+          </button>
           <br /><br />
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
