--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="player-div">
-        <div class="player1 player1-active">Player 1</div>
+        <div class="player1 player--active">Player 1</div>
 
         <div class="sticks-div"></div>
 
@@ -18,17 +18,17 @@
       <span class="txtSticks">Take amount of sticks</span>
       <div class="takeSticks-div">
         <div class="btn btn-1">
-          <button type="button" class="btn btn-1" onclick="takeSticks(1)">
+          <button type="button" id="btn-1" class="btn" onclick="takeSticks(1)">
             1
           </button>
         </div>
         <div class="btn btn-2">
-          <button type="button" class="btn btn-2" onclick="takeSticks(2)">
+          <button type="button" id="btn-2" class="btn" onclick="takeSticks(2)">
             2
           </button>
         </div>
         <div class="btn btn-3">
-          <button type="button" class="btn btn-3" onclick="takeSticks(3)">
+          <button type="button" id="btn-3" class="btn" onclick="takeSticks(3)">
             3
           </button>
           <br /><br />
