--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="player2">Player 2</div>
       </div>
       <span class="txtSticks">Take amount of sticks</span>
-      <div class="takeSticks-div">
+      <div class="takeSticks-container">
         <div class="btn btn-1">
           <button type="button" id="btn-1" class="btn" onclick="takeSticks(1)">
             1
@@ -31,7 +31,14 @@
           <button type="button" id="btn-3" class="btn" onclick="takeSticks(3)">
             3
           </button>
-          <br /><br />
+        </div>
+      </div>
+      <div class="container-3">
+        <div class="again-div">
+          <button id="again" type="button">Again!</button>
+        </div>
+        <div class="start-div">
+          <button id="play" type="button">Play game!</button>
         </div>
       </div>
     </div>
