--- a/index.html
+++ b/index.html
@@ -18,19 +18,13 @@
       <span class="txtSticks">Take amount of sticks</span>
       <div class="takeSticks-container">
         <div class="btn btn-1">
-          <button type="button" id="btn-1" class="btn" onclick="takeSticks(1)">
-            1
-          </button>
+          <button type="button" id="btn-1" class="btn">1</button>
         </div>
         <div class="btn btn-2">
-          <button type="button" id="btn-2" class="btn" onclick="takeSticks(2)">
-            2
-          </button>
+          <button type="button" id="btn-2" class="btn">2</button>
         </div>
         <div class="btn btn-3">
-          <button type="button" id="btn-3" class="btn" onclick="takeSticks(3)">
-            3
-          </button>
+          <button type="button" id="btn-3" class="btn">3</button>
         </div>
       </div>
       <div class="container-3">
